--- a/src/Reverser/Properties/launchSettings.json
+++ b/src/Reverser/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "Reverser": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "--log \"C:\\Users\\fkinz\\source\\repos\\Tsltn\\src\\Reverser\\bin\\\\\" --tsltn \"C:\\Users\\fkinz\\source\\repos\\FolkerKinzel.VCards\\src\\FolkerKinzel.VCards\\Translations\\FolkerKinzel.VCards.en.tsltn\" --in \"C:\\Users\\fkinz\\source\\repos\\FolkerKinzel.VCards\\src\\FolkerKinzel.VCards\\\\\" --out \"C:\\Users\\fkinz\\source\\repos\\Tsltn\\src\\Reverser\\bin\\ReverserTest\\\\\" -r \"C:\\Users\\fkinz\\source\\repos\\Tsltn\\src\\Reverser\\VCardsReplacements.csv\" --loglevel 1 -t"
     }
   }
 }
