--- a/src/Reverser/Properties/launchSettings.json
+++ b/src/Reverser/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "Reverser": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "--log \"C:\\Users\\fkinz\\source\\repos\\FolkerKinzel.Contacts\\src\\FolkerKinzel.Contacts\\\\\" --tsltn \"C:\\Users\\fkinz\\source\\repos\\FolkerKinzel.Contacts\\src\\FolkerKinzel.Contacts\\Translations\\FolkerKinzel.Contacts.en.tsltn\" --in \"C:\\Users\\fkinz\\source\\repos\\FolkerKinzel.Contacts\\src\\FolkerKinzel.Contacts\\\\\" --loglevel 1 -r \"C:\\Users\\fkinz\\source\\repos\\Tsltn\\src\\Reverser\\ContactsReplacements.csv\""
     }
   }
 }
