--- a/src/Reverser/Properties/launchSettings.json
+++ b/src/Reverser/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Reverser": {
-      "commandName": "Project",
-      "commandLineArgs": "--log \"C:\\Users\\fkinz\\source\\repos\\FolkerKinzel.Contacts.IO\\src\\FolkerKinzel.Contacts.IO\\\\\" --tsltn \"C:\\Users\\fkinz\\source\\repos\\FolkerKinzel.Contacts.IO\\src\\FolkerKinzel.Contacts.IO\\Translations\\FolkerKinzel.Contacts.IO.en.tsltn\" --in \"C:\\Users\\fkinz\\source\\repos\\FolkerKinzel.Contacts.IO\\src\\FolkerKinzel.Contacts.IO\\\\\" --loglevel 1 -r \"C:\\Users\\fkinz\\source\\repos\\Tsltn\\src\\Reverser\\UserFiles\\ContactsIOReplacements.csv\" -t"
+      "commandName": "Project"
     }
   }
 }
